# openu-assembler-project

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  assembler.c  consts.h  error.c  error.h  first_iter.c  first_iter.h  first_step.c  first_step.h  input_utils.c  input_utils.h  instruction_handling.c  instruction_handling.h  io_parsers.c  io_parsers.h  macros_table.c  macros_table.h  memory_wrappers.c  memory_wrappers.h  output_generator.c  output_generator.h  pre_process.c  pre_process.h  preprocess.c  second_step.c  second_step.h  symbol_table.c  symbol_table.h  temp.txt  util_types.h  utils.c  utils.h
.github/workflows/: makefile.yml
test-files/: full_list_mc.am  full_list_mc.as  result_macros_expect.as  test1.as  work1.am  work1.as  work1.ent  work1.ext  work1.ob  work2.am  work2.as  work2.ent  work2.ext  work2.ob
